--- a/Overlap Models/models.tex
+++ b/Overlap Models/models.tex
@@ -19,7 +19,7 @@
 \scriptsize
 
 \begin{equation}
-	\min_{N_{y,m,\sigma}, P_{m,i}, R_{m,\sigma} \in \mathbb{Z}^*}
+	\min_{N_{y,m,\sigma}, P_{m,i}, R_{m,i,\sigma} \in \mathbb{Z}^*}
 	\begin{aligned}
 	\frac{1}{|S|} \cdot \sum_{\sigma \in S} ( \sum_{m \in M} [\sum_{y \in Y} 
 	(N_{y,m,\sigma} \cdot c_{y,m}) +  
@@ -49,7 +49,46 @@ N_{y,m,\sigma}					&\leq		A_{y,m} - N^{Inst}_{y,m}								& \forall \sigma \in S
 \end{frame}
 
 \begin{frame}{Notation overview}
+\tiny
+\begin{columns}
+\begin{column}{.48\textwidth}
+Sets:
+\begin{itemize}
+\item $S$: Scenarios
+\item $M$: Months
+\item $Y$: Vessel types
+\item $I^P$: Indices for the planned tasks (first time a turbine is visited is index 1, second time is index 2, etc...)
+\item $I^R$: Types of failures reactive tasks
+\end{itemize}
 
+Decision variables:
+\begin{itemize}
+\item $N_{y,m,\sigma}$: The amount of vessels of type $y$ chartered in month $m$ in scenario $\sigma$
+\item $P_{m,i}$: Planned $i$th tasks in month $m$
+\item $R_{m,i,\sigma}$: Reactive tasks of type $i$ in month $m$ and scenario $\sigma$
+\end{itemize}
+\end{column}
+
+\hfill
+
+\begin{column}{.48\textwidth}
+Parameters:
+\begin{itemize}
+\item $c_{y,m}$: The cost of chartering a vessel of type $y$ in month $m$
+\item $d_P$: The duration of a preventive task
+\item $e^H_m$: The energy produced by a single turbine per hour in month $m$
+\item $f_{m,i,\sigma}$: The amount of failures of type $i$ in month $m$ in scenario $\sigma$
+\item $H_m$: The number of hours in month $m$
+\item $L_y$: The amount of hours a vessel of type $y$ is available if chartered for a month
+\item $L^{Inst}_{y,m}$: Leftover hours vessels of type $y$ are available in month $m$ based on the installation schedule
+\item $d^P_y$: The duration of a preventive task for vessel type $y$
+\item $d^R_{y,i}$: The duration of a reactive task $i$ for vessel type $y$
+\item $G^{MIN}$ \& $G^{MAX}$: The minimum and maximum amounts of months between two planned maintenance tasks
+\item $A_{y,m}$: The number of maximum available vessels of type $y$ in month $m$
+\item $N^{Inst}_{y,m}$: Amount of vessels of type $y$ used by the installation schedule in month $m$
+\end{itemize}
+\end{column}
+\end{columns}
 \end{frame}
 
 \end{document}
