--- a/Overlap Models/models.tex
+++ b/Overlap Models/models.tex
@@ -47,6 +47,34 @@ N_{y,m,\sigma}				&\leq		A_{y,m} 											& \forall \sigma \in S, \forall m \i
 
 \end{frame}
 
+\begin{frame}{Years spanning model}
+\smalld
+
+\begin{equation}
+	\min_{\substack{N_{y,m,\sigma}, P_{m,ip} \in \mathbb{Z}^* \\ 
+	R_{m,ir,\sigma}, F^U_{m,ir,\sigma} \in \mathbb{Z}^* }}
+	\begin{aligned}
+	\frac{1}{|S|} \cdot \sum_{\sigma \in S} \sum_{m \in M} [ \sum_{y \in Y} 
+	(N_{y,m,\sigma} \cdot c_{y,m}) +  
+	e^H_m \cdot (\sum_{ip \in I^P} [P_{m,ip} \cdot d^P \cdot e^H_m] + \\
+	\sum_{ir \in I^R}[F^U_{m,ir,\sigma} \cdot \frac{H_m}{2} + 
+	(F^T_{m,ir,\sigma} - F^U_{m,ir,\sigma}) \cdot (d^R_{ir} + d^D_{ir}) + 
+	R_{m,ir,\sigma}  \cdot d^R_{ir}])]
+	\end{aligned}	
+\end{equation}
+subject to:
+\begin{align}
+L_y \cdot N_{y,m,\sigma} + L^{Inst}_{y,m}	&\geq \begin{aligned} \epsilon_{\sigma, m, y} + \sum_{ip \in I^P} (P_{m,ip} \cdot d^P_y) + \\ \sum_{ir \in I^R} (R_{m,ir,\sigma} \cdot d^R_{y,ir})  \end{aligned}
+																				& \forall \sigma \in S, \forall m \in M, \forall y \in Y 	\\
+\rho_{ \sigma, m, y} - N^{Inst}_{y,m}	&\leq		 N_{y,m,\sigma}	\leq 	A_{y,m} 							& \forall \sigma \in S, \forall m \in M, \forall y \in Y 	\\
+R_{m,ir,\sigma}				&\leq		F^U_{m-1,ir,\sigma} 									& \forall \sigma \in S, \forall m \in M, \forall ir \in I^R	\\
+P_{m,ip} 					&\leq 		\sum_{m' = 0}^{m-G^{MIN}} P_{m',(ip-1)} - \sum_{m' = 0}^{m-1} P_{m',ip}	& \forall m \in M, \forall ip \in I^P 			\\
+P_{m,ip} 					&\geq	 	\sum_{m' = 0}^{m-G^{MAX}} P_{m',(ip-1)} - \sum_{m' = 0}^{m-1} P_{m',ip}	& \forall m \in M, \forall ip \in I^P 			\\
+F^U_{m,ir,\sigma} - F^T_{m,ir,\sigma} + R_{m,ir,\sigma}	&\geq		\begin{aligned} \frac{1}{d^R_{y, ir}} \cdot (L_y \cdot N_{y,m,\sigma} + L^{Inst}_{y,m} -  \epsilon_{\sigma, m, y} - \\ \sum_{ip \in I^P} (P_{m,ip} \cdot d^P_y) - \sum_{ir \in I^R} (R_{m,ir,\sigma} \cdot d^R_{y,ir})) \end{aligned}		& \forall \sigma \in S, \forall m \in M, \forall y \in Y
+\end{align}
+
+\end{frame}
+
 \begin{frame}{Years model Explanation}
 \smalla
 \expl The objective takes an average cost of all scenarios by counting up the cost per month. Each month has a cost for vessels chartered (by type), the energy lost due to planned maintenance, and the energy lost due to unrepaired failures \\
